@@ -1,0 +1,16 @@
+Event: {EVENTNAME}
+Location: {EVENTLOCATION}
+Date: {EVENTDATEFROM}
+Link to the event: {EVENTURL}
+
+Hallo {NAME},
+
+The event has been cancelled.
+
+{SIGNATURE}
+
+------------------------------------------------------------------
+
+{X_SITENAME} ({X_SITEURL})
+
+------------------------------------------------------------------
