@@ -1,0 +1,15 @@
+Information for event owners:
+-----------------------------
+
+Following event has been cancelled:
+
+Event: {EVENTNAME}
+Location: {EVENTLOCATION}
+Date: {EVENTDATEFROM}
+Link to event: {EVENTURL}
+
+------------------------------------------------------------------
+
+{X_SITENAME} ({X_SITEURL})
+
+------------------------------------------------------------------
