@@ -1,0 +1,16 @@
+Veranstaltung: {EVENTNAME}
+Ort: {EVENTLOCATION}
+Datum: {EVENTDATEFROM}
+Link zur Veranstaltung: {EVENTURL}
+
+Hallo {NAME},
+
+Die Veranstaltung wurde leider abgesagt.
+
+{SIGNATURE}
+
+------------------------------------------------------------------
+
+{X_SITENAME} ({X_SITEURL})
+
+------------------------------------------------------------------
