@@ -1,0 +1,15 @@
+Informationen für Veranstalter:
+-------------------------------
+
+Folgende Veranstaltung wurde abgesagt:
+
+Veranstaltung: {EVENTNAME}
+Ort: {EVENTLOCATION}
+Datum: {EVENTDATEFROM}
+Link zur Veranstaltung: {EVENTURL}
+
+------------------------------------------------------------------
+
+{X_SITENAME} ({X_SITEURL})
+
+------------------------------------------------------------------
